CMAKE_MINIMUM_REQUIRED (VERSION 3.6)

set (CMAKE_C_COMPILER "gcc")
set (CMAKE_CXX_COMPILER "g++")
set (CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-g -std=c++14 -Wno-expansion-to-defined -Wno-deprecated-declarations -Wunused-variable" CACHE STRING "Setting default compiler flags.")

project (cgns_examples)
set (VERSION_MAJOR "0")
set (VERSION_MINOR "0")
set (VERSION_PATCH "0")
set (VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")

set (CMAKE_MODULE_PATH $ENV{CMAKE_MODULES})
set (CGNS_VERSION  "3.3.1" )

set (CGNS_DIR $ENV{CGNS_DIR}/Release/Static)
find_package (CGNS ${CGNS_VERSION} REQUIRED)
if (CGNS_FOUND)
    include_directories (${CGNS_INCLUDE_DIR})
endif ()

macro (add_executable _target)
    _add_executable (${_target} ${ARGN})
    target_link_libraries (${_target} ${CGNS_LIBRARIES})
endmacro ()

macro (add_library _target)
    _add_library (${_target} ${ARGN})
    target_link_libraries (${_target} ${CGNS_LIBRARIES})
endmacro ()

add_subdirectory (CGNSFile)
add_subdirectory (structured_grid_simple)
add_subdirectory (UnstructuredGrid3DExample)
add_subdirectory (my_structured_grid_simple)
add_subdirectory (StructuredGrid3D)
add_subdirectory (StructuredGrid2D)
add_subdirectory (UnstructuredGrid3D)
add_subdirectory (UnstructuredGrid2D)
add_subdirectory (writeFieldExample)
add_subdirectory (writeTransientExample)
add_subdirectory (GeneratePressureField)
add_subdirectory (GeneratePressureField2D)
add_subdirectory (GenerateTransientPressureField)

message ("\n-- Project: ${PROJECT_NAME} ${VERSION}")
message ("-- Install prefix: ${CMAKE_INSTALL_PREFIX}\n")
message ("-- C++ compiler: ${CMAKE_CXX_COMPILER}")
message ("-- Compile flags: ${CMAKE_CXX_FLAGS}")
